[package]
name = "sol-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
num-bigfloat = "1.7.1"
num-bigint = "0.4.6"
num_enum = "0.7.3"
solana-sdk = "2.0.10"
solana-client = "2.0.10"
bincode = "1.3.3"
base64 = "0.22.1"
arrayref = "0.3.9"
time = "0.3.36"
dyn-clone = "1.0.17"
bytemuck = "1.18.0"
num-traits = "0.2.19"
uint = { version = "0.10.0", default-features = false }
rand = "0.8.5"
num-integer = "0.1.45"
ruint = "1.3.0"
anyhow = "1.0.71"
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", features=["no-entrypoint", "program"] }
log = "0.4.22"

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/ivs/curve25519-dalek', branch='rustls-dep-hell' }
aes-gcm-siv = { git = 'https://github.com/ivs/AEADs', branch='rustls-dep-hell' }